# Pong

./: CMakeLists.txt  README.md  ball.cpp  main.cpp  rect.h
include/: ball.h  graphics.h  shape.h
lib/: rect.cpp  shape.cpp
